src/objects/Grant__c.object
<CustomObject>
    <description>Stores data about grants</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Money that will be granted</description>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Category__c</fullName>
        <description>List that helps to group the grant by Category</description>
        <label>Grant Category</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Grant_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Date__c</fullName>
        <description>As of date</description>
        <inlineHelpText>As of date</inlineHelpText>
        <label>Grant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Grant Request that originated this grant</description>
        <label>Grant Request</label>
        <referenceTo>Grant_Request__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Status__c</fullName>
        <description>Informs about the condition of the grant</description>
        <label>Grant Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Pending Grantee Additional Info</fullName>
                </value>
                <value>
                    <fullName>Grant Signed</fullName>
                </value>
                <value>
                    <fullName>Grant Funded</fullName>
                </value>
                <value>
                    <fullName>Completed - Used Funding</fullName>
                </value>
                <value>
                    <fullName>Completed - Returned Funding</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                    <isActive>false</isActive>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Applied</fullName>
                    <isActive>false</isActive>
                    <label>Applied</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <description>Helps to classify the grant into a group</description>
        <label>Grant Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Pay It Forward</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Grant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Grant_Date__c</columns>
        <columns>Grant_Status__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Grant_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Grant_List_View</fullName>
        <columns>NAME</columns>
        <columns>Grant_Date__c</columns>
        <columns>Grant_Status__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Grant List View</label>
    </listViews>
    <nameField>
        <displayFormat>A{000}</displayFormat>
        <label>Grant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>